k8s/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitai-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitai-backend
  template:
    metadata:
      labels:
        app: fitai-backend
    spec:
      containers:
      - name: fitai-backend
        image: gcr.io/fitai-459007/fitai-backend:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1Gi"
            cpu: "2000m"
          limits:
            memory: "4Gi"
            cpu: "4000m"
